# openff-units

./: .gitattributes  .gitignore  .lgtm.yml  .pre-commit-config.yaml  .readthedocs.yaml  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  environment.yml  pixi.toml  pyproject.toml  setup.cfg  setup.py
.github/: CONTRIBUTING.md  dependabot.yml
.github/workflows/: CI.yaml  ci.yaml  ci_pypi.yaml  lint.yaml
devtools/: README.md
devtools/conda-envs/: docs_env.yaml  requirements.txt  test_env.yaml
docs/: Makefile  README.md  api.rst  conf.py  getting_started.rst  index.md  index.rst  make.bat  releasehistory.md
docs/_templates/autosummary/: base.rst  class.rst
downstream_dummy/: dummy.py  setup.py
downstream_dummy/tests/: test_dummy.py
openff/: __init__.py  _version.py  units.py
openff/tests/: test_openff.py
openff/units/: __init__.py  _version.py  elements.py  exceptions.py  openmm.py  simtk.py  units.py  units.pyi  utilities.py  utils.py
openff/units/_tests/: test_elements.py  test_openmm.py  test_units.py
openff/units/data/: README.md  defaults.txt
openff/units/tests/: test_elements.py  test_openff.py  test_openmm.py  test_simtk.py  test_units.py
stubs/openmm/unit/: __init__.pyi  baseunit.pyi
