[build-system]
requires = [
    "setuptools",
    "versioningit",
]
build-backend = "setuptools.build_meta"

[project]
name="openff-units"
description = "A common units module for the OpenFF software stack"
readme = "README.md"
authors = [{name = "Open Force Field Initiative", email = "info@openforcefield.org"}]
license = {text = "MIT"}
dynamic = ["version"]

[tool.setuptools.packages]
find = {}

[tool.versioningit]

[tool.ruff]
line-length = 99
namespace-packages = ["openff/units/"]
exclude = ["openff/units/_version.py", "versioneer.py"]

[tool.ruff.lint]
ignore = ["E721","D105","D107","D200","D203","D212"]
select = ["F", "E", "W", "NPY", "UP", "RUF", "I"]

[tool.ruff.lint.per-file-ignores]
"openff/units/**/__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-third-party = ["openff.utilities"]

[tool.coverage.run]
omit = [
    "*/*/_tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@overload",
]

[tool.mypy]
mypy_path = "stubs/"
plugins = "numpy.typing.mypy_plugin"
warn_unused_configs = true
warn_unused_ignores = true
warn_incomplete_stub = true
show_error_codes = true
exclude = [
    "openff/units/_tests/",
    "openff/units/data",
]

[tool.pytest.ini_options]
addopts = "--cov=openff/units --cov-report=xml"
