[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=77.0.3",
  "versioningit",
]

[project]
name = "openff-units"
description = "A common units module for the OpenFF software stack"
readme = "README.md"
license = { text = "MIT" }
authors = [ { name = "Open Force Field Initiative", email = "info@openforcefield.org" } ]
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [ "version" ]
dependencies = [
  "numpy",
  "openff-utilities>=0.1.3",
  "pint>=0.24,<0.24.5",
]

optional-dependencies.test = [
  "pytest",
  "pytest-cov",
  "pytest-randomly",
  "pytest-xdist",
  "uncertainties",
]
optional-dependencies.typing = [
  "mypy",
  "types-setuptools",
]

[tool.setuptools.packages]
find = {}

[tool.ruff]
line-length = 99
namespace-packages = [ "openff/units/" ]
exclude = [ "openff/units/_version.py", "versioneer.py" ]

lint.select = [ "E", "F", "I", "NPY", "RUF", "UP", "W" ]
lint.ignore = [ "D105", "D107", "D200", "D203", "D212", "E721" ]
lint.per-file-ignores."openff/units/**/__init__.py" = [ "F401" ]
lint.isort.known-third-party = [ "openff.utilities" ]

[tool.pytest.ini_options]
addopts = "--cov=openff/units --cov-report=xml"

[tool.coverage.run]
omit = [
  "*/*/_tests/*",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "@overload",
]

[tool.mypy]
mypy_path = "stubs/"
plugins = "numpy.typing.mypy_plugin"
warn_unused_configs = true
warn_unused_ignores = true
warn_incomplete_stub = true
show_error_codes = true
exclude = [
  "openff/units/_tests/",
  "openff/units/data",
]

[tool.versioningit]
